25beabba207a9f1917c34e3a318f26134a79def3 fix: Fix styling issues with overflow in splt buttons
Jira Issue DD-2372

Sync to source repo @25beabba207a9f1917c34e3a318f26134a79def3

--- a/css/buttons.foundation.css
+++ b/css/buttons.foundation.css
@@ -187,8 +187,12 @@ div.dt-button-collection div.dt-btn-split-wrapper a.button {
 }
 div.dt-button-collection div.dt-btn-split-wrapper a.button,
 div.dt-button-collection div.dt-btn-split-wrapper button.button {
+  display: inline-block !important;
+  white-space: nowrap;
   height: 40px;
   flex-basis: auto;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 div.dt-button-background {
